default/objects/InsurableCoverage__c/InsurableCoverage__c.object-meta.xml
<CustomObject>
    <label>Insurable Coverage</label>
    <nameField>
        <label>Insurable Coverage Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurable Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>