default/objects/InsurableCoverage__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Insurable Coverages</relationshipLabel>
    <relationshipName>InsurableCoverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>