default/objects/InsurableCoverage__c/fields/CoverageAmountLimit__c.field-meta.xml
<CustomField>
    <fullName>CoverageAmountLimit__c</fullName>
    <label>Coverage Amount Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>