default/objects/InsurableCoverage__c/fields/DeductibleAmount__c.field-meta.xml
<CustomField>
    <fullName>DeductibleAmount__c</fullName>
    <label>Deductible Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>