default/objects/InsurableCoverage__c/fields/UsageConsumed__c.field-meta.xml
<CustomField>
    <fullName>UsageConsumed__c</fullName>
    <label>Usage Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>