default/objects/InsurableCoverage__c/fields/UsageLimit__c.field-meta.xml
<CustomField>
    <fullName>UsageLimit__c</fullName>
    <label>Usage Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>